--- a/config
+++ b/config
@@ -210,7 +210,7 @@ bar {
 				inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
 				urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 		}
-		position top
+		position bottom
 }
 
 bindsym $mod+shift+x exec i3lock --color "$bg-color"
