--- a/config
+++ b/config
@@ -52,7 +52,7 @@ bindsym XF86AudioPrev exec playerctl previous
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+Q kill
@@ -65,10 +65,10 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+m focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -77,10 +77,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+M move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -89,7 +89,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+h+s split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -166,10 +166,10 @@ mode "resize" {
 # Pressing right will grow the window’s width.
 # Pressing up will shrink the window’s height.
 # Pressing down will grow the window’s height.
-	bindsym j resize shrink width 10 px or 10 ppt
+	bindsym h resize shrink width 10 px or 10 ppt
 		bindsym k resize grow height 10 px or 10 ppt
-		bindsym l resize shrink height 10 px or 10 ppt
-		bindsym m resize grow width 10 px or 10 ppt
+		bindsym j resize shrink height 10 px or 10 ppt
+		bindsym l resize grow width 10 px or 10 ppt
 
 # same bindings, but for the arrow keys
 		bindsym Left resize shrink width 10 px or 10 ppt
@@ -213,11 +213,13 @@ bar {
 		position bottom
 }
 
+# custom command
 bindsym $mod+shift+x exec i3lock --color "$bg-color"
+bindsym $mod+c exec google-chrome-stable
 #background
 exec_always feh --bg-scale /home/samuel/Pictures/rick_wallpaper.jpg
 #assign
 assign [class="chrome"] $ws1
-assign [class="Gnome-terminal"] $ws2
+assign [class="kitty"] $ws2
 assign [class="Code"] $ws3
 
