--- a/config
+++ b/config
@@ -118,7 +118,7 @@ bindsym $mod+q focus parent
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1: browser"
 set $ws2 "2: term"
-set $ws3 "3: code"
+set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
